# deepracing_ros

./: README.md  addpythonpathsrc.bash  addpythonpathsrc.ps1
deepracing_launch/: CMakeLists.txt  package.xml
deepracing_launch/config/: controllers.yaml  drivers.yaml  ekf.yaml  ekf_local.yaml  measurement_publisher.yaml  multiagent_controller.yaml  multiplexer.yaml  oracle_raceline.yaml  pid_gains.yaml  pure_pursuit.yaml  race_supervisor.yaml  tf_updater.yaml  track_clouds.rviz
deepracing_launch/data/: covariances.json  vigem_calibration.json
deepracing_launch/launch/: all.launch.py  controllers.launch.py  drivers_and_boundaries.launch.py  ekf.launch  ekf.launch.py  gamepad_multiplexer.launch.py  global_publishers.launch.py  image_proc.launch.py  multiagent_controller.launch.py  pure_pursuit.launch.py  pure_pursuit_oracle.launch  pure_pursuit_oracle_vjoy.launch  race_supervisor.launch  ros_rebroadcaster.launch.py  utilities.launch.py  velocity_controller.launch.py
deepracing_launch/maps/Australia/: centerline.pcd  combined.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd  widthmap.pcd
deepracing_launch/maps/Australia/offset_lines/: centerline_minus1_0_optimized.pcd  centerline_minus1_0_optimized_aggressive.pcd  centerline_minus1_0_optimized_hypersafe.pcd  centerline_minus1_0_optimized_safe.pcd  centerline_minus1_0_optimized_superaggressive.pcd  centerline_minus1_0_optimized_supersafe.pcd  centerline_minus1_0_optimized_ultrasafe.pcd  centerline_minus2_0_optimized.pcd  centerline_minus2_0_optimized_aggressive.pcd  centerline_minus2_0_optimized_hypersafe.pcd  centerline_minus2_0_optimized_safe.pcd  centerline_minus2_0_optimized_superaggressive.pcd  centerline_minus2_0_optimized_supersafe.pcd  centerline_minus3_0_optimized.pcd  centerline_minus3_0_optimized_aggressive.pcd  centerline_minus3_0_optimized_safe.pcd  centerline_minus3_0_optimized_superaggressive.pcd  centerline_minus3_0_optimized_supersafe.pcd  centerline_optimized.pcd  centerline_optimized_aggressive.pcd  centerline_optimized_hypersafe.pcd  centerline_optimized_safe.pcd  centerline_optimized_superaggressive.pcd  centerline_optimized_supersafe.pcd  centerline_optimized_ultrasafe.pcd  centerline_plus1_0_optimized.pcd  centerline_plus1_0_optimized_aggressive.pcd  centerline_plus1_0_optimized_hypersafe.pcd  centerline_plus1_0_optimized_safe.pcd  centerline_plus1_0_optimized_superaggressive.pcd  centerline_plus1_0_optimized_supersafe.pcd  centerline_plus1_0_optimized_ultrasafe.pcd  centerline_plus2_0_optimized.pcd  centerline_plus2_0_optimized_aggressive.pcd  centerline_plus2_0_optimized_hypersafe.pcd  centerline_plus2_0_optimized_safe.pcd  centerline_plus2_0_optimized_superaggressive.pcd  centerline_plus2_0_optimized_supersafe.pcd  centerline_plus2_0_optimized_ultrasafe.pcd  centerline_plus3_0_optimized.pcd  (+21 more)
deepracing_launch/maps/Bahrain/: centerline.pcd  combined.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd  widthmap.pcd
deepracing_launch/maps/Bahrain/optimized_lines/: centerline_optimized.pcd  centerline_optimized_hypersafe.pcd  centerline_optimized_safe.pcd  centerline_optimized_supersafe.pcd  centerline_optimized_ultrasafe.pcd  inner_boundary_optimized.pcd  inner_boundary_optimized_hypersafe.pcd  inner_boundary_optimized_safe.pcd  inner_boundary_optimized_supersafe.pcd  inner_boundary_optimized_ultrasafe.pcd  outer_boundary_optimized.pcd  outer_boundary_optimized_hypersafe.pcd  outer_boundary_optimized_safe.pcd  outer_boundary_optimized_supersafe.pcd  outer_boundary_optimized_ultrasafe.pcd  raceline_optimized.pcd  raceline_optimized_hypersafe.pcd  raceline_optimized_safe.pcd  raceline_optimized_supersafe.pcd  raceline_optimized_ultrasafe.pcd
deepracing_launch/maps/Britain/: centerline.pcd  combined.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd  widthmap.pcd
deepracing_launch/maps/Britain/optimized_lines/: centerline_optimized.pcd  centerline_optimized_hypersafe.pcd  centerline_optimized_safe.pcd  centerline_optimized_supersafe.pcd  centerline_optimized_ultrasafe.pcd  inner_boundary_optimized.pcd  inner_boundary_optimized_hypersafe.pcd  inner_boundary_optimized_safe.pcd  raceline_optimized.pcd  (+11 more)
deepracing_launch/maps/Jeddah/: centerline.pcd  combined.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd  widthmap.pcd
deepracing_launch/maps/LOR/: centerline.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd
deepracing_launch/maps/LVMS/: centerline.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd
deepracing_launch/maps/Monza/: centerline.pcd  centerline_with_offsets.pcd  combined.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd  widthmap.pcd
deepracing_launch/maps/Putnam_Park/: centerline.pcd  inner_boundary.pcd  metadata.yaml  outer_boundary.pcd  raceline.pcd
deepracing_launch/rviz/: deepracing.rviz
deepracing_rclcpp/: CMakeLists.txt  package.xml
deepracing_rclcpp/config/: egocentric_view.rviz  rebroadcaster.yaml  tf_updater.yaml  track_clouds.rviz  velocity_pid.yaml
deepracing_rclcpp/include/deepracing_ros/: visibility_control.hpp
deepracing_rclcpp/launch/: utilities.launch.py  velocity_controller.launch.py
deepracing_rclcpp/src/: autoware_control_node.cpp  boundary_publisher.cpp  control_node.cpp  extract_bezier_curves.cpp  gamepad_multiplexer_node.cpp  path_converter.cpp  race_supervisor.cpp  ros_rebroadcaster.cpp  tf_updater.cpp  velocity_control_node.cpp
deepracing_rclcpp/src/composable_nodes/: CMakeLists.txt  car_setup_node.cpp  car_status_node.cpp  ekf_monitor.cpp  gamepad_multiplexer_node.cpp  lap_data_node.cpp  map_to_baselink_transform.cpp  map_to_odom_transform.cpp  measurement_publisher.cpp  motion_data_ex_node.cpp  motion_data_node.cpp  multiagent_control_node.cpp  session_data_node.cpp  telemetry_data_node.cpp  trackmap_publisher.cpp  udp_demuxer_node.cpp
deepracing_rclcpp/src/utils/: f1_msg_utils.cpp  f1_msg_utils_2018.cpp  f1_msg_utils_2020.cpp  f1_msg_utils_2023.cpp  file_utils.cpp  xinput_msg_utils.cpp
(+142 files in other folders)
